src/main/java/com/example/orderservice/error/ResourceNotFoundException.java
package com.example.orderservice.error;

public class ResourceNotFoundException extends RuntimeException {
    public ResourceNotFoundException(String message) { super(message); }
}

